--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title></title>
   </head>
   <body>
-    <form method="post" action="task-table.html">
-      <table border="1" align="center">
-        <tr>
-          <td>Email:</td>
-          <td><input type="email" name="email"email</td>
-        </tr>
-        <tr>
-          <td>Password:</td>
-          <td><input type="password" name="password"password</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" name="rememberme" />Remember me</td>
-        </tr>
-        <tr>
-          <td><input type="submit" name="submit" value="login"</td>
-        </tr>
-      </table>
-    </form>
+    <img src="fruits.jpg" alt="fruits" usemap="#fruits" />
+    <map name="fruits">
+      <area
+        target="_blank"
+        alt=""
+        title=""
+        href="mango.jpg"
+        coords="118,96,70,151"
+        shape="rect"
+      />
+      <area
+        target="_blank"
+        alt=""
+        title=""
+        href="banana.jpg"
+        coords="182,280,48"
+        shape="circle"
+      />
+      <area
+        target="_blank"
+        alt=""
+        title=""
+        href="apple.jpg"
+        coords="277,162,303,243,211,226"
+        shape="poly"
+      />
+    </map>
   </body>
 </html>
