--- a/index.html
+++ b/index.html
@@ -5,25 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table border="1" align="center" cellspacing="5" cellpadding="10">
-      <tr>
-        <td colspan="2" align="center"><b>HEADER</b></td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center"><b>NAV</b></td>
-      </tr>
-      <tr>
-        <td colspan="1" align="center"><b>SECTION</b></td>
-        <td rowspan="2" colspan="1" align="center"><b>ASIDE</b></td>
-      </tr>
-      <tr>
-        <td colspan="1" align="center"><b>ARTICAL</b></td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center"><b>FOOTER</b></td>
-      </tr>
-    </table>
+    <header>
+      <ul id="navbar">
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+        <li>Login</li>
+      </ul>
+    </header>
   </body>
 </html>
